[package]
name = "bpftool_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
libbpf-rs = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
libbpf-cargo = "0.21"
